--- a/contenu-web/index.html
+++ b/contenu-web/index.html
@@ -42,8 +42,8 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="" id="services" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
             <div class="dropdown-menu" aria-labelledby="services">
-              <a class="dropdown-item" href="#">Worpress</a>
-              <a class="dropdown-item" href="#">PhpMyAdmin</a>
+              <a class="dropdown-item" href="http://localhost:88">Worpress</a>
+              <a class="dropdown-item" href="http://localhost:82">PhpMyAdmin</a>
               <a class="dropdown-item" href="#">PostgreSQL</a>
               <a class="dropdown-item" href="#">Percona</a>
             </div>
@@ -63,8 +63,12 @@
       <div class="starter-template">
         <h1 style="color: chocolate;">Bienvenue sur TP01.420-4D4</h1>
         <h5 style="color: rgb(51, 111, 143);">Sélectionnez un sous-système en cliquant sur son logo</h5><br/><br/>
-        <center><img src="" width="100" height="100" title="wordpress"/>&nbsp<img src="" width="100" height="100" title="phpmyadmin"/>
-        <img src="" width="100" height="100" title="postgres"/>&nbsp;<img src="" width="100" height="100" title="percona" /></center>
+        <center>
+          <a href="http://localhost:88"><img src="wordpress.png" width="100" height="100" title="wordpress"/></a>
+          <img src="phpmyadmin.png" width="100" height="100" title="phpmyadmin"/>
+        <img src="postgres.png" width="100" height="100" title="postgres"/>&nbsp;
+        <img src="percona-logo.png" width="100" height="100" title="percona" />
+      </center>
 
         <br/><p class="lead">Gabarit de départ le travail pratique numéro 1<br>Énoncé disponible à <a href="https://github.com/ve2cuy/420-4D4.TP01.Depart/">https://github.com/ve2cuy/420-4D4.TP01.Depart</a></href></p>
       </div>
@@ -74,7 +78,7 @@
     <footer class="footer">
       <div class="container">
 
-        <span class="text-muted">Projet de départ par Alain Boudreault (c) 2021, TP01 réalisé par VOTRE NOM</span>
+        <span class="text-muted">Projet de départ par Alain Boudreault (c) 2021, TP01 réalisé par Samuel Gascon</span>
       </div>
     </footer>
 
