--- a/contenu-web/index.html
+++ b/contenu-web/index.html
@@ -44,8 +44,8 @@
             <div class="dropdown-menu" aria-labelledby="services">
               <a class="dropdown-item" href="http://localhost:88">Worpress</a>
               <a class="dropdown-item" href="http://localhost:82">PhpMyAdmin</a>
-              <a class="dropdown-item" href="#">PostgreSQL</a>
-              <a class="dropdown-item" href="#">Percona</a>
+              <a class="dropdown-item" href="http://localhost:81">PostgreSQL</a>
+              <a class="dropdown-item" href="http://localhost:83">Percona</a>
             </div>
           </li>
         </ul>
@@ -65,9 +65,9 @@
         <h5 style="color: rgb(51, 111, 143);">Sélectionnez un sous-système en cliquant sur son logo</h5><br/><br/>
         <center>
           <a href="http://localhost:88"><img src="wordpress.png" width="100" height="100" title="wordpress"/></a>
-          <img src="phpmyadmin.png" width="100" height="100" title="phpmyadmin"/>
-        <img src="postgres.png" width="100" height="100" title="postgres"/>&nbsp;
-        <img src="percona-logo.png" width="100" height="100" title="percona" />
+          <a href="http://localhost:82"> <img src="phpmyadmin.png" width="100" height="100" title="phpmyadmin"/></a>
+          <a href="http://localhost:81"> <img src="postgres.png" width="100" height="100" title="postgres"/>&nbsp;</a>
+          <a href="http://localhost:83"><img src="percona-logo.png" width="100" height="100" title="percona" /></a>
       </center>
 
         <br/><p class="lead">Gabarit de départ le travail pratique numéro 1<br>Énoncé disponible à <a href="https://github.com/ve2cuy/420-4D4.TP01.Depart/">https://github.com/ve2cuy/420-4D4.TP01.Depart</a></href></p>
